--- a/components/d3tgk6rs4-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/d3tgk6rs4-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d3tgk6rs4-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-34c759b71d.00vg.p3.openshiftapps.com/rhtap/rhtap-qe:07fd8dfd9bef7a2fa86c229fe61d66f5735b96be@sha256:8d1fea03b23b38e0c93a6b70392079fdc8b1930bd50393719e423c3077b7e58a
+          name: container-image
